--- a/_posts/2020-6-18-NEAT.md
+++ b/_posts/2020-6-18-NEAT.md
@@ -5,6 +5,8 @@ date: 2020-6-18 2:13:00-0400
 description: 
 comments: false
 tags: Machine-Learning Finance
+thumbnail: assets/img/neuralnetwork.png
+
 ---
 
 <p style="text-align: center;"><font size="+3">Introduction</font></p>
